fix(widget): z-index

--- a/source/css/_style/_layout/sidebar.styl
+++ b/source/css/_style/_layout/sidebar.styl
@@ -362,3 +362,4 @@
 .widget-sticky
   position: sticky
   top: $navbar-height + $gap
+  z-index 10
